# clash-multiplatform-compat

./: build.gradle.kts  settings.gradle.kts
.github/workflows/: publish.yaml
base/: build.gradle.kts
base/src/main/java/com/github/kr328/clash/compat/: AppCompat.java  CompatLibrary.java  FileCompat.java  NetworkCompat.java  NotificationCompat.java  NotifierCompat.java  ProcessCompat.java  SecurityCompat.java  ShellCompat.java  ThemeCompat.java  Utils.java  WindowCompat.java
base/src/test/java/com/github/kr328/clash/compat/: AppTest.java  FileTest.java  LoadTest.java  NetworkTest.java  NotificationTest.java  NotifierTest.java  ProcessTest.java  SecurityTest.java  ShellTest.java  ThemeTest.java  Window.java  WindowTest.java
jni/: build.gradle.kts
jni/crate/: Cargo.toml  Cross.toml
jni/crate/src/: app.rs  file.rs  lib.rs  network.rs  notification.rs  notifier.rs  process.rs  security.rs  shell.rs  theme.rs  window.rs
jni/crate/src/common/: file.rs  mod.rs  network.rs  notifier.rs  shell.rs  theme.rs  window.rs
jni/crate/src/helper/: array.rs  call.rs  lazy.rs  mod.rs  refs.rs  strings.rs  throwable.rs  vm.rs
jni/crate/src/linux/: errno.rs  file.rs  mod.rs  network.rs  notification.rs  notifier.rs  process.rs  security.rs  shell.rs  testdata.rs  theme.rs  window.rs
jni/crate/src/linux/dbus/: build.sh  dbus_menu.rs  file_chooser.rs  mod.rs  notifications.rs  notifier_item.rs  notifier_watcher.rs  open_uri.rs  request.rs  settings.rs
jni/crate/src/linux/dbus/xml/: dbus-menu.xml  org.freedesktop.portal.FileChooser.xml  org.freedesktop.portal.Notification.xml  org.freedesktop.portal.OpenURI.xml  org.freedesktop.portal.Request.xml  org.freedesktop.portal.Settings.xml  org.kde.StatusNotifierItem.xml  org.kde.StatusNotifierWatcher.xml
jni/crate/src/utils/: scoped.rs
jni/crate/src/win32/: error.rs  file.rs  icons.rs  mod.rs  network.rs  notification.rs  notifier.rs  process.rs  prop.rs  shell.rs  strings.rs  testdata.rs  theme.rs  thread.rs  version.rs  window.rs
jni/src/commonMain/cinterops/: java.def
jni/src/commonMain/cinterops/include/: NOTICE
jni/src/commonMain/kotlin/com/github/kr328/clash/compat/: Disposable.kt  FileCompat.kt  JavaVm.kt  ProcessCompat.kt  ShellCompat.kt  Syscall.kt  ThemeCompat.kt  WindowCompat.kt
jni/src/commonMain/kotlin/com/github/kr328/clash/compat/helper/: Array.kt  Attach.kt  Boolean.kt  Exception.kt  Functions.kt  Lazy.kt  String.kt  Values.kt
jni/src/linuxMain/cinterops/: linux.def
jni/src/linuxMain/kotlin/com/github/kr328/clash/compat/: FileCompat.kt  ProcessCompat.kt  ShellCompat.kt  ThemeCompat.kt  WindowCompat.kt
jni/src/linuxMain/kotlin/com/github/kr328/clash/compat/concurrent/: Lock.kt  Thread.kt
jni/src/linuxMain/kotlin/com/github/kr328/clash/compat/dbus/: Builder.kt  Call.kt  Error.kt  Extractor.kt  Message.kt
jni/src/linuxMain/kotlin/com/github/kr328/clash/compat/os/: Syscall.kt
jni/src/linuxMain/kotlin/com/github/kr328/clash/compat/x11/: X11.kt
jni/src/mingwMain/cinterops/: windows.def
jni/src/mingwMain/kotlin/com/github/kr328/clash/compat/: FileCompat.kt  ProcessCompat.kt  ShellCompat.kt  ThemeCompat.kt  WindowCompat.kt
jni/src/mingwMain/kotlin/com/github/kr328/clash/compat/concurrent/: Thread.kt
jni/src/mingwMain/kotlin/com/github/kr328/clash/compat/os/: Syscall.kt
