[package]
name = "clash-multiplatform-compat-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "compat"
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"

[dependencies]
home = "0.5.4"
uuid = { version = "1.3", features = ["v4"] }
rand = "0.8"
cstr = "0.2"
futures = { version = "0.3", features = ["thread-pool"] }
once_cell = "1.17"
jni-sys = "0.3"
rust-embed = "6.6"
ico = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
errno = "0.3"
zbus = "3.11"
x11 = { version = "2.21", features = ["xlib"] }

[target.'cfg(windows)'.dependencies]
quick-xml = "0.28"

[target.'cfg(windows)'.dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Storage_FileSystem",
    "Win32_Storage_EnhancedStorage",
    "Win32_System_Pipes",
    "Win32_Security",
    "Win32_Networking_WinSock",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls_Dialogs",
    "Foundation",
    "Foundation_Collections",
    "Data_Xml_Dom",
    "UI_Notifications",
    "UI_ViewManagement",
]
